[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-backtrace = "0.2.2"
async-oncecell = "0.2.0"
auto_enums = "0.8"
bytes = "*"
clap = { version = "4", features = ["cargo", "derive"] }
crc32fast = "1"
crepe = "0.1.7"
criterion = { version = "*", features = ["async_tokio"] }
easy-ext = "1.0.1"
error-stack = "0.3.1"
futures = "0.3"
futures-async-stream = "0.2"
indextree = "*"
indicatif = { version = "0.17.3", features = ["tokio"] }
itertools = "*"
lazy_static = "*"
libc = "0.2.140"
maplit = "1.0.2"
partial-borrow = "1.0.1"
pin-project = "*"
pin-project-lite = "*"
quote = "1.0.23"
rand = "*"
rdkafka = "0.29.0"
self_cell = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "1.0.109"
tempfile = "3.5.0"
tikv-jemallocator = "0.5"
tokio = { version = "1.20", features = ["full"] }
tracing = "*"
tracing-forest = "0.1.5"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3.16"
triomphe = "*"
yield-iter = "*"

[features]

[[bench]]
name = "discontinuous"
harness = false

[[bench]]
name = "async_expr"
harness = false

[[bench]]
name = "empty_iter"
harness = false
