[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-backtrace = "0.2.2"
async-oncecell = "0.2.0"
auto_enums = "0.8"
borrowme = "0.0.14"
bytes = "*"
clap = { version = "4", features = ["cargo", "derive"] }
crc32fast = "1"
crepe = "0.1.7"
criterion = { version = "*", features = ["async_tokio"] }
ctor = "0.2.4"
diplomatic-bag = "0.3.1"
easy-ext = "1.0.1"
enum-as-inner = "0.6.0"
error-stack = "0.4.1"
futures = "0.3"
futures-async-stream = "0.2"
hyper = { version = "0.14", features = ["full"] }
indextree = "*"
indicatif = { version = "0.17.3", features = ["tokio"] }
itertools = "*"
lazy_static = "*"
libc = "0.2.140"
maplit = "1.0.2"
ouroboros = "0.18.0"
partial-borrow = "1.0.1"
pin-project = "*"
pin-project-lite = "*"
powerset-enum = "0.1.0"
qcell = "0.5.4"
quote = "1.0.23"
rand = "*"
rdkafka = "0.29.0"
readonly = "0.2.11"
self_cell = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
simd-json = "0.10.5"
# snafu = { version = "0.7.5", features = ["unstable-provider-api", "rust_1_61", "backtraces-impl-std"]}
subenum = "1.0.1"
syn = "1.0.109"
tempfile = "3.5.0"
thiserror = "1.0.44"
tikv-jemallocator = "0.5"
tokio = { version = "1.20", features = ["full"] }
tokio-postgres = "0.7.8"
tracing = "*"
tracing-forest = "0.1.5"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3.16"
triomphe = "*"

[features]

[[bench]]
name = "discontinuous"
harness = false

[[bench]]
name = "async_expr"
harness = false

[[bench]]
name = "empty_iter"
harness = false
