[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-backtrace = "0.2.2"
async-oncecell = "0.2.0"
auto_enums = "0.8"
borrowme = "0.0.14"
bytes = "*"
castaway = "0.2.2"
clap = { version = "=4.4.4", features = ["cargo", "derive"] }
crc32fast = "1"
crepe = "0.1.7"
criterion = { version = "*", features = ["async_tokio"] }
ctor = "0.2.4"
diff-struct = "0.5.3"
diplomatic-bag = "0.3.1"
easy-ext = "1.0.1"
enum-as-inner = "0.6.0"
error-stack = "0.4.1"
eval-macro = "0.5.0"
expect-test = "1.5.0"
fd-lock = "4"
futures = "0.3"
futures-async-stream = "0.2"
governor = "0.6.3"
hyper = { version = "0.14", features = ["full"] }
indextree = "*"
indicatif = { version = "0.17.3", features = ["tokio"] }
inventory = "0.3.15"
itertools = "*"
jsonwebtoken = "9.3.0"
lazy_static = "*"
libc = "0.2.140"
linkme = "0.3.26"
maplit = "1.0.2"
maybe-async = { version = "0.2.10", features = ["is_sync"] }
moka = { version = "0.12.8", features = ["sync"] }
ouroboros = "0.18.0"
partial-borrow = "1.0.1"
paste = "1.0.14"
pin-project = "*"
pin-project-lite = "*"
powerset-enum = "0.1.0"
prost = "0.12.3"
qcell = "0.5.4"
quote = "1.0.23"
rand = "*"
rdkafka = "0.29.0"
readonly = "0.2.11"
ring = "0.17.8"
rusty-fork = "0.3.0"
schemars = "1.0.3"
self_cell = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
simd-json = "0.10.5"
stacker = "0.1.15"
# snafu = { version = "0.7.5", features = ["unstable-provider-api", "rust_1_61", "backtraces-impl-std"]}
subenum = "1.0.1"
syn = "1.0.109"
tempfile = "3.5.0"
testcontainers = "0.15.0"
thiserror = "1.0.44"
thiserror-ext = "0.1"
tikv-jemallocator = "0.5"
tokio = { version = "1.20", features = ["full"] }
tokio-postgres = "0.7.8"
tokio-util = "0.7.11"
tonic = "0.11.0"
tracing = "*"
tracing-forest = "0.1.5"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3.16"
triomphe = "*"
typify = "0.4.2"
wasmtime = "17.0.0"
winnow = "0.6.8"
zerocopy = { version = "0.8", features = ["derive", "std"] }

[features]

[[bench]]
name = "discontinuous"
harness = false

[[bench]]
name = "async_expr"
harness = false

[[bench]]
name = "empty_iter"
harness = false

[dev-dependencies]
